@@ -65,6 +65,8 @@ In alphabetical order (by last name)
 ** Patch for integration with autotest
 * Steven Duncan
 ** Documentation for rake task
+* Eloy Duran
+** Patch [#11921] Adds the correct controller_name from derived_controller_name() to the ViewExampleController
 * Lindsay Evans
 ** Patch for Spec::Rails on Windows
 * Nicholas Evans
