@@ -1,0 +1,1 @@
+<%= method_in_plugin_application_helper %>
